--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,6 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.19",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.7",
     "gungi.js": "^1.0.0",
     "polished": "^4.0.5",
     "react": "^17.0.1",
@@ -50,6 +45,11 @@
   },
   "devDependencies": {
     "@types/node": "^12.19.11",
-    "@types/webpack-env": "^1.16.0"
+    "@types/webpack-env": "^1.16.0",
+    "@types/jest": "^26.0.19",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.7"
   }
 }
