--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,22 +1,40 @@
 {
 	"compilerOptions": {
+		"baseUrl": ".",
+		"outDir": "build/dist",
+		"module": "esnext",
 		"target": "es5",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"typeRoots": ["./node_modules/@types"],
+		"lib": ["es6", "dom", "esnext.asynciterable"],
+		"sourceMap": true,
 		"allowJs": true,
+		"jsx": "react-jsx",
+		"moduleResolution": "node",
+		"rootDir": "src",
+		"forceConsistentCasingInFileNames": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"suppressImplicitAnyIndexErrors": true,
+		"noUnusedLocals": true,
+		"experimentalDecorators": true,
+		"allowSyntheticDefaultImports": true,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
 		"strict": true,
-		"forceConsistentCasingInFileNames": true,
 		"noFallthroughCasesInSwitch": true,
-		"module": "esnext",
-		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"noImplicitAny": false, //TODO: remove
-		"noEmit": true,
-		"jsx": "react-jsx"
+		"noEmit": true
 	},
+	"exclude": [
+		"node_modules",
+		"build",
+		"scripts",
+		"acceptance-tests",
+		"webpack",
+		"jest",
+		"src/setupTests.ts"
+	],
 	"include": ["src"]
 }
