--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon --exec babel-node server.js --ignore client"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "gungi.js": "^1.0.0",
-    "socket.io": "^3.0.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "nodemon": "^2.0.6"
-  }
+	"name": "gungi-server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"watch": "tsc -w",
+		"dev": "nodemon dist/index.js",
+		"dev2": "nodemon --exec ts-node src/index.ts",
+		"start": "node dist/index.js",
+		"start2": "ts-node src/index.ts"
+	},
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"gungi.js": "^1.0.0",
+		"socket.io": "^3.0.4"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.11",
+		"@types/node": "^14.14.27",
+		"@types/socket.io": "^2.1.13",
+		"nodemon": "^2.0.6",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.1.5"
+	}
 }
