--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"react-particles-js": "^3.4.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
+		"socket.io-client": "^2.4.0",
 		"styled-components": "^5.2.1",
 		"typescript": "^4.1.3"
 	},
@@ -50,6 +51,7 @@
 		"@types/react": "^16.14.2",
 		"@types/react-dom": "^16.9.10",
 		"@types/react-router-dom": "^5.1.6",
+		"@types/socket.io-client": "^1.4.35",
 		"@types/styled-components": "^5.1.7",
 		"@types/webpack-env": "^1.16.0"
 	}
