--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,10 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"gungi.js": "^1.0.0",
-		"socket.io": "^3.0.4"
+		"socket.io": "^2.4.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.10",
 		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.27",
 		"@types/socket.io": "^2.1.13",
