--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,14 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"gungi.js": "^1.0.0",
-		"socket.io": "^2.4.0"
+		"socket.io": "^3.1.2",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.10",
 		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.27",
-		"@types/socket.io": "^2.1.13",
+		"@types/uuid": "^8.3.0",
 		"nodemon": "^2.0.6",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.5"
