--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"express": "^4.17.1",
-		"gungi.js": "^1.0.0",
+		"gungi.js": "1.0.4",
 		"socket.io": "^3.1.2",
 		"uuid": "^8.3.2"
 	},
