--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,19 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"build": "tsc",
 		"watch": "tsc -w",
 		"dev": "nodemon dist/index.js",
 		"dev2": "nodemon --exec ts-node src/index.ts",
 		"start": "node dist/index.js",
-		"start2": "ts-node src/index.ts"
+		"start2": "ts-node src/index.ts",
+		"gen-env": "gen-env-types .env -o src/typings/env.d.ts -e ."
 	},
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
 		"gungi.js": "1.0.4",
 		"socket.io": "^3.1.2",
@@ -23,6 +27,7 @@
 		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.27",
 		"@types/uuid": "^8.3.0",
+		"gen-env-types": "^1.3.0",
 		"nodemon": "^2.0.6",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.5"
