--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@material-ui/core": "^4.11.2",
+		"@material-ui/lab": "^4.0.0-alpha.58",
 		"@testing-library/jest-dom": "^5.11.6",
 		"@testing-library/react": "^11.2.2",
 		"@testing-library/user-event": "^12.6.0",
@@ -11,6 +12,7 @@
 		"mobx-react-lite": "1.0.1",
 		"polished": "^4.0.5",
 		"react": "^17.0.2",
+		"react-device-detect": "^1.17.0",
 		"react-dom": "^17.0.1",
 		"react-epic-spinners": "^0.5.0",
 		"react-particles-js": "^3.4.1",
