--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
 		"react-scripts": "4.0.1",
 		"socket.io-client": "^3.1.2",
 		"styled-components": "^5.2.1",
+		"sweetalert2": "^11.0.16",
+		"sweetalert2-react-content": "^4.0.1",
 		"typescript": "^4.1.3"
 	},
 	"proxy": "http://localhost:4000",
